--- a/grid/03-grid-layout-3/style.css
+++ b/grid/03-grid-layout-3/style.css
@@ -5,6 +5,11 @@
 
 .container {
   text-align: center;
+
+  display: grid;
+  grid-template-columns: 1fr 4fr;
+  grid-template-rows: repeat(auto-fit, 1fr);
+  gap: 5px;
 }
 
 .container div {
@@ -17,6 +22,26 @@
 
 .header {
   background-color: #393f4d;
+  grid-column: 1 / 3;
+  grid-row: 1 / 2;
+
+  display: grid;
+  grid-template-columns: 1fr 2fr;
+  grid-template-rows: 1fr;
+  align-items: center;
+  justify-items: start;
+
+}
+
+.header ul {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-template-rows: 1fr;
+  justify-items: center;
+}
+
+.menu {
+  width: 100%;
 }
 
 .menu ul,
@@ -26,6 +51,13 @@
 
 .sidebar {
   background-color: #C50208;
+  grid-column: 1 / 2;
+  grid-row: 2 / 4;
+
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: repeat(4, 1fr);
+  gap: 20px;
 }
 
 .sidebar .photo {
@@ -34,6 +66,9 @@
   font-size: 12px;
   font-weight: normal;
   border-radius: 10px;
+  display: grid;
+  justify-items: center;
+  align-items: center;
 }
 
 
@@ -42,10 +77,24 @@
   color: black;
   font-size: 16px;
   font-weight: normal;
+  display: grid;
+  justify-items: center;
+  align-items: center;
 }
 
 .nav {
   background-color: #C50208;
+  grid-column: 2 / 3;
+  grid-row: 2 / 3;
+
+  display: grid;
+}
+
+.nav ul {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: 100%;
+  align-items: center;
 }
 
 .nav ul li {
@@ -55,6 +104,13 @@
 
 .article {
   background-color: #bccbde;
+  grid-column: 2 / 3;
+  grid-row: 3 / 4;
+
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  grid-auto-rows: 200px;
+  gap: 10px;
 }
 
 .article p {
@@ -83,9 +139,15 @@
 
 .footer {
   background-color: #393f4d;
+  grid-column: 1 / 3;
+  grid-row: 4 / 5;
 }
 
 .footer p {
   font-size: 13px;
   font-weight: normal;
+}
+
+ul {
+  list-style-type: none;
 }
